aar添加版本号

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -354,7 +354,7 @@ dependencies {
     compile files('libs/mid-sdk-2.3.jar')
     testCompile files('libs/javassist.jar')
     //    compile 'com.cylan.iot.sdk:sdkLib:213'
-    compile(name: 'sdkLib-debug', ext: 'aar')
+    compile(name: 'sdkLib-debug-225', ext: 'aar')
     //谷歌推送
     compile files('libs/MiPush_SDK_Client_3_2_2.jar')
     compile('com.mikepenz:fastadapter:2.5.2@aar') {
