--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,12 @@ apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'org.greenrobot.greendao'
 apply plugin: 'project-report'
-//apply plugin: 'com.github.typ0520.fastdex'
+
+if (project.rootProject.file('fastdex.properties'))
+    apply plugin: 'com.github.typ0520.fastdex'
 
 ////多渠道包没人愿意维护多渠道包，算了，删了吧。
 apply plugin: 'packer'
-
 
 //从version.properties中读取versionName
 def vCode
