--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'org.greenrobot.greendao'
 apply plugin: 'project-report'
 
-if (project.rootProject.file('fastdex.properties'))
+if (project.rootProject.file('fastdex.properties').exists())
     apply plugin: 'com.github.typ0520.fastdex'
 
 ////多渠道包没人愿意维护多渠道包，算了，删了吧。
