--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-//apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'org.greenrobot.greendao'
 apply plugin: 'project-report'
 //apply plugin: 'io.fabric'
@@ -308,7 +308,7 @@ dependencies {
     compile files('libs/open_sdk_r5781.jar')
     testCompile files('libs/javassist.jar')
     //    compile 'com.cylan.iot.sdk:sdkLib:213'
-    compile(name: 'sdkLib-debug', ext: 'aar')
+    compile(name: 'sdkLib-release-0627', ext: 'aar')
     //谷歌推送
     compile files('libs/MiPush_SDK_Client_3_2_2.jar')
     compile('com.mikepenz:fastadapter:2.5.2@aar') {
