做了无用功

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,10 +88,10 @@ android {
     signingConfigs {
         debug {
             v2SigningEnabled false
-//            storeFile file('../debug.keystore')
-//            storePassword 'android'
-//            keyAlias 'AndroidDebugKey'
-//            keyPassword 'android'
+            storeFile file('../debug.keystore')
+            storePassword 'android'
+            keyAlias 'AndroidDebugKey'
+            keyPassword 'android'
 //            Properties properties = new Properties()
 //            File localProperties = project.rootProject.file('local.properties')
 //            if (localProperties.exists()) {
@@ -308,7 +308,7 @@ dependencies {
     compile files('libs/open_sdk_r5781.jar')
     testCompile files('libs/javassist.jar')
     //    compile 'com.cylan.iot.sdk:sdkLib:213'
-    compile(name: 'sdkLib-debug', ext: 'aar')
+    compile(name: 'sdkLib-release-0628', ext: 'aar')
     //谷歌推送
     compile files('libs/MiPush_SDK_Client_3_2_2.jar')
     compile('com.mikepenz:fastadapter:2.5.2@aar') {
