--- a/app/build.gradle
+++ b/app/build.gradle
@@ -334,9 +334,11 @@ dependencies {
     }
     //谷歌推送
     compile files('libs/MiPush_SDK_Client_3_2_2.jar')
-    compile('com.mikepenz:fastadapter:2.5.2@aar') {
+    compile('com.mikepenz:fastadapter:2.6.2@aar') {
         transitive = true
     }
+    compile 'com.mikepenz:fastadapter-commons:2.6.0@aar'
+    compile 'com.mikepenz:materialize:1.0.2@aar'
     //可以单独使用，不需要依赖下方的扩展包
     //RxJava扩展支持，根据需要添加
     //可以单独使用，不需要依赖下方的扩展包
