--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -538,7 +538,7 @@
             android:name="${ApplicationId}.permission.MIPUSH_RECEIVE"
             android:protectionLevel="signature" />
 
-        <uses-permission android:name="${ApplicationId}.permission.MIPUSH_RECEIVE" />
+        <!--<uses-permission android:name="${ApplicationId}.permission.MIPUSH_RECEIVE" />-->
         <uses-permission android:name="android.permission.VIBRATE" />
 
         <service
