--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,25 +92,25 @@ android {
     signingConfigs {
         debug {
             v2SigningEnabled false
-//            storeFile file('../debug.keystore')
-//            storePassword 'android'
-//            keyAlias 'AndroidDebugKey'
-//            keyPassword 'android'
-            Properties properties = new Properties()
-            File localProperties = project.rootProject.file('local.properties')
-            if (localProperties.exists()) {
-                properties.load(localProperties.newDataInputStream())
-                def store_file = properties.getProperty('store_file')
-                if (store_file != null) {
-                    def store_pwd = properties.getProperty('store_pwd')
-                    def store_alias = properties.getProperty('store_alias')
-                    def store_alias_pwd = properties.getProperty('store_alias_pwd')
-                    storeFile file(store_file)
-                    storePassword store_pwd
-                    keyAlias store_alias
-                    keyPassword store_alias_pwd
-                }
-            }
+            storeFile file('../debug.keystore')
+            storePassword 'android'
+            keyAlias 'AndroidDebugKey'
+            keyPassword 'android'
+//            Properties properties = new Properties()
+//            File localProperties = project.rootProject.file('local.properties')
+//            if (localProperties.exists()) {
+//                properties.load(localProperties.newDataInputStream())
+//                def store_file = properties.getProperty('store_file')
+//                if (store_file != null) {
+//                    def store_pwd = properties.getProperty('store_pwd')
+//                    def store_alias = properties.getProperty('store_alias')
+//                    def store_alias_pwd = properties.getProperty('store_alias_pwd')
+//                    storeFile file(store_file)
+//                    storePassword store_pwd
+//                    keyAlias store_alias
+//                    keyPassword store_alias_pwd
+//                }
+//            }
         }
         release {
             // 满足下面两个条件时需要此配置
@@ -173,7 +173,7 @@ android {
                                     "weChatAppSecret"    : "d93676ab7db1876c06800dee3f33fbc2",
                                     "sinaAppKey"         : "\\ 1315129656",
                                     "sinaAppSecret"      : "5feab23e093b43f220bccf7fbab8f6c5",
-                                    "SERVER"             : "yun.jfgou.com:443",
+                                    "SERVER"             : "test1.jfgou.com:443",
                                     "GCM_APP_ID"         : "\\ 985304692675",
                                     "ApplicationId"      : applicationId,
                                     "XiaoMiAppId"        : "\\ 5241757040488",
