--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -418,13 +418,14 @@
             android:configChanges="locale|orientation|keyboardHidden"
             android:screenOrientation="portrait"
             android:theme="@style/CamActivityTheme"
-            android:windowSoftInputMode="adjustPan|stateHidden"/>
+            android:windowSoftInputMode="adjustPan|stateHidden" />
         <!-- <intent-filter> -->
         <!-- <action android:name="android.intent.action.MAIN" /> -->
 
 
         <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
         <!-- </intent-filter> -->
+
 
         <!-- <service android:name=".n.engine.DataSourceService" /> -->
 
@@ -541,7 +542,7 @@
             android:name="${ApplicationId}.permission.MIPUSH_RECEIVE"
             android:protectionLevel="signature" />
 
-        <!--<uses-permission android:name="${ApplicationId}.permission.MIPUSH_RECEIVE" />-->
+        <!-- <uses-permission android:name="${ApplicationId}.permission.MIPUSH_RECEIVE" /> -->
         <uses-permission android:name="android.permission.VIBRATE" />
 
         <service
@@ -698,6 +699,13 @@
             android:windowSoftInputMode="adjustResize" />
         <activity android:name=".support.splash.SplashActivity" />
         <activity android:name=".support.login.LoginActivity" />
+        <activity android:name=".n.view.activity.BindDeviceActivityExt">
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        </activity>
     </application>
 
 </manifest>
