--- a/app/build.gradle
+++ b/app/build.gradle
@@ -418,6 +418,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
     compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 }
 
 //谷歌推送
