--- a/gradle.properties
+++ b/gradle.properties
@@ -13,9 +13,9 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Fri Feb 10 09:38:43 CST 2017
-systemProp.http.proxyHost=127.0.0.1
+#systemProp.http.proxyHost=127.0.0.1
+#systemProp.http.proxyPort=8080
 org.gradle.jvmargs=-Xmx4608M
 org.gradle.daemon=true
 org.gradle.parallel=true
-systemProp.http.proxyPort=8080
 android.useDeprecatedNdk=true
