--- a/app/build.gradle
+++ b/app/build.gradle
@@ -388,11 +388,11 @@ dependencies {
     compile 'com.romandanylyk:pageindicatorview:0.2.0'
     compile 'com.mcxiaoke.gradle:packer-helper:1.0.9'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
     compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar'
     compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.cylan.library:iotsdk:1.0-SNAPSHOT'
+//    compile 'com.cylan.library:iotsdk:1.0-SNAPSHOT'
 
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
 }
 
 //谷歌推送
