--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     repositories {
         jcenter()
 //        maven { url 'https://maven.fabric.io/public' }
-        flatDir { dirs 'libs' }
+        maven { url 'http://192.168.100.221:8081/artifactory/libs-snapshot-local'}
 
     }
     dependencies {
@@ -28,6 +28,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url 'http://192.168.100.221:8081/artifactory/libs-snapshot-local'}
         maven {
 //              审核通过之后,可以注释掉
             url 'https://dl.bintray.com/cylan/maven/'
