--- a/app/build.gradle
+++ b/app/build.gradle
@@ -187,7 +187,7 @@ android {
             ]
         }
         _doby {
-            applicationId "com.cleverdog.new.doby"
+            applicationId "com.cylan.jiafeigou.doby"
             versionName vName
             versionCode vCode
             manifestPlaceholders = ["HW_PUSH_AUTHORITIES": "com.cylan.jiafeigou.zhongxing.hms.update.provider",
@@ -354,13 +354,7 @@ dependencies {
     //可以单独使用，不需要依赖下方的扩展包
 
     //RxJava扩展支持，根据需要添加
-    compile 'tv.danmaku.ijk.media:ijkplayer-java:0.7.5'
-    compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.7.5'
-    compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.7.5'
     compile 'com.cylan.ext:annotations:0.1.0'
-    compile 'tv.danmaku.ijk.media:ijkplayer-java:0.7.5'
-    compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.7.5'
-    compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.7.5'
     annotationProcessor project(':processor')
     compile 'tv.danmaku.ijk.media:ijkplayer-java:0.7.5'
     compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.7.5'
@@ -384,19 +378,14 @@ dependencies {
     compile 'com.lzy.net:okgo:2.1.4'
     compile 'com.lzy.net:okrx:0.1.2'
     compile 'com.lzy.net:okserver:1.1.3'
-    compile 'org.jsoup:jsoup:1.9.2'
+    compile 'org.jsoup:jsoup:1.10.2'
     compile 'com.romandanylyk:pageindicatorview:0.2.0'
     compile 'com.mcxiaoke.gradle:packer-helper:1.0.9'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar'
     compile 'de.hdodenhof:circleimageview:2.1.0'
-<<<<<<< HEAD
     compile(group: 'com.cylan.library', name: 'iotsdk', version: '1.0-20170712.050453-1', ext: 'aar')
-=======
-//    compile 'com.cylan.library:iotsdk:1.0-SNAPSHOT'
-
     annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
->>>>>>> 3.2.2
 }
 
 //谷歌推送
