--- a/app/build.gradle
+++ b/app/build.gradle
@@ -180,7 +180,7 @@ android {
             ]
         }
         _doby {
-            applicationId "com.cylan.jiafeigou.doby"
+            applicationId "com.cylan.jiafeigou.zhongxing"
             versionName vName
             versionCode vCode
             manifestPlaceholders = ["HW_PUSH_AUTHORITIES": "com.cylan.jiafeigou.zhongxing.hms.update.provider",
