门铃,消息, h5分享

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -707,6 +707,10 @@
             android:screenOrientation="portrait"
             android:theme="@style/CamActivityTheme"
             android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".n.view.mine.ShareContentWebH5Activity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:theme="@style/CamActivityTheme" />
     </application>
 
 </manifest>
