--- a/app/build.gradle
+++ b/app/build.gradle
@@ -341,11 +341,11 @@ dependencies {
     compile 'com.lzy.net:okserver:1.1.3'
     compile 'org.jsoup:jsoup:1.10.2'
     compile 'com.romandanylyk:pageindicatorview:0.2.0'
-    compile 'com.mcxiaoke.gradle:packer-helper:1.0.9'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
+    compile 'com.mcxiaoke.packer-ng:helper:2.0.0'
 }
 /////////////////编译过滤器/////////////////////////////////
 //只需要在一个文件中读出需要编译的 variant名字
