--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -211,13 +211,13 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan|stateHidden" />
-        <!--<intent-filter>-->
-        <!--<action android:name="android.intent.action.MAIN" />-->
+        <!-- <intent-filter> -->
+        <!-- <action android:name="android.intent.action.MAIN" /> -->
 
 
-        <!--<category android:name="android.intent.category.LAUNCHER" />-->
-        <!--</intent-filter>-->
-        <!--</activity>-->
+        <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+        <!-- </intent-filter> -->
+        <!-- </activity> -->
         <activity
             android:name=".n.view.activity.CameraLiveActivity"
             android:configChanges="locale|orientation|keyboardHidden|navigation|screenSize"
@@ -319,13 +319,13 @@
             android:exported="true"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             tools:replace="android:theme" />
-        <activity
-            android:name=".n.view.panorama.PanoramaCameraActivity"
-            android:configChanges="locale|orientation|keyboardHidden"
-            android:launchMode="singleTask"
-            android:screenOrientation="portrait"
-            android:theme="@style/CamActivityTheme"
-            android:windowSoftInputMode="adjustPan|stateHidden" />
+        <!--<activity-->
+        <!--android:name=".n.view.panorama.PanoramaCameraFragment"-->
+        <!--android:configChanges="locale|orientation|keyboardHidden"-->
+        <!--android:launchMode="singleTask"-->
+        <!--android:screenOrientation="portrait"-->
+        <!--android:theme="@style/CamActivityTheme"-->
+        <!--android:windowSoftInputMode="adjustPan|stateHidden" />-->
 
         <meta-data
             android:name="io.fabric.ApiKey"
@@ -711,6 +711,13 @@
             android:name=".n.view.mine.ShareContentWebH5Activity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:theme="@style/CamActivityTheme" />
+        <activity
+            android:name=".n.view.panorama.CameraMainActivity"
+            android:configChanges="locale|orientation|keyboardHidden"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:theme="@style/CamActivityTheme"
+            android:windowSoftInputMode="adjustPan|stateHidden"></activity>
     </application>
 
 </manifest>
