1.dobyNew微信appKey,Secret修改,2.广告页面增加日志

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -182,8 +182,8 @@ android {
                                     "qqAppId"            : "\\ 1106279832",
                                     "qqAppKey"           : "vqSXNT11dsbu24io",
                                     "mtaAppKey"          : "ATQ1JV694AKT",
-                                    "weChatAppId"        : "wx292ae57e5ab2316d",
-                                    "weChatAppSecret"    : "8d99286b4f23ca56fa60c5f1defd6116",
+                                    "weChatAppId"        : "wx81d893be5216671c",
+                                    "weChatAppSecret"    : "b867a2e433701bc00dffda2099655d7e",
                                     "sinaAppKey"         : "\\ 2444488421",
                                     "sinaAppSecret"      : "dfba216fe44f0d6613cdda1557790a31",
                                     "SERVER"             : "yun.jfgou.com:443",
